:bug: #982 - fix: fix invisibility of focussed skiplink.

--- a/rijkshuisstijl/sass/components/skiplink/skiplink.scss
+++ b/rijkshuisstijl/sass/components/skiplink/skiplink.scss
@@ -1,7 +1,20 @@
 @import '../../settings/all';
+@import "microscope-sass/lib/color";
+@import "microscope-sass/lib/typography";
 
 .skiplink {
   position: absolute;
   top: -100vh;
   left: -100vh;
+}
+
+.skiplink:focus {
+  @include body;
+  @include border(all, $color-primary);
+  @include color-background;
+  box-sizing: border-box;
+  font-family: $typography-font-family-text;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
